syntax = "proto3";
option go_package = "github.com/fogoid/terminalpad/proto";

service Notepad {
    rpc GetAllNotes(Empty) returns (stream NoteResponse) {}
    rpc GetNote (NoteGetRequest) returns (NoteResponse) {}
    rpc CreateNote (NewNoteRequest) returns (NoteResponse) {}
    rpc UpdateNote (UpdateNoteRequest) returns (NoteResponse) {}
    rpc DeleteNote (DeleteNoteRequest) returns (Empty) {}
}

message Empty {}

message NewNoteRequest {
    string title = 1;
    string content = 2;
}

message NoteGetRequest {
    string id = 1;
};

message UpdateNoteRequest {
    string id = 1;
    string title = 2;
    string content = 3;
}

message DeleteNoteRequest {
    string id = 1;
}

message NoteResponse {
    string id = 1;
    string title = 2;
    string content = 3;
}
